--- a/cursos/html_css/css_basico/styles.css
+++ b/cursos/html_css/css_basico/styles.css
@@ -1,9 +1,25 @@
+h1 {
+    font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+.established {
+    font-style: italic;
+}
+
 h1, h2, p {
     text-align: center;
 }
 
 body{
     background-image: url(https://www.elpunto.com.co/wp-content/uploads/2020/08/papeleria.jpg);
+    font-family: sans-serif;
+    padding: 20px;
 }
 
 .menu{
@@ -11,12 +27,72 @@ body{
     background-color: darkseagreen;
     margin-left: auto;
     margin-right: auto;
+    padding: 20px;
+    max-width: 500px;
 }
 
-.article{
+.article, .dessert{
     text-align: left;
+    width: 75%;
 }
 
 .price{
     text-align: right;
+    width: 25%;
 }
+
+.item p{
+    display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 18px;
+}
+
+h1, h2 {
+    font-family: Impact, serif;
+}
+
+hr {
+    height: 3px;
+    background-color: darkslateblue;
+    border-color: darkslateblue;
+    height: 2px;
+}
+
+.bottom-line {
+    margin-top: 25px;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -25px;
+}
+
+/* FOOTER */
+
+footer {
+    font-size: 14px;
+}
+
+.address {
+    margin-bottom: 5px;
+}
+
+a {
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: brown;
+}
+
+a:active {
+    color: brown;
+}
+
