--- a/cursos/html_css/accesibilidad/styles.css
+++ b/cursos/html_css/accesibilidad/styles.css
@@ -1,5 +1,11 @@
 
 
+@media (prefers-reduced-motion: no-preference){
+    *{
+        scroll-behavior: smooth;
+    }
+}
+
 body{
     background: #f5f6f7;
     color: #1b1b32;
@@ -12,6 +18,10 @@ header{
     height: 50px;
     background-color: #1b1b32;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
 }
 
 #logo{
@@ -24,6 +34,20 @@ header{
 h1{
     color: #f1be32;
     font-size: min(5vw, 1.2em);
+    text-align: center;
+}
+
+main{
+    padding-top: 25px;
+}
+
+section{
+    width: 80%;
+    margin-bottom: 10px;
+    margin-top: 0;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 600px;
 }
 
 nav {
@@ -35,6 +59,29 @@ nav {
 nav > ul{
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-inline-start: 0;
+    margin-block: 0;
+    height: 100%;
+}
+
+nav > ul > li{
+    color: #dfdfe2;
+    margin: 0 0.2rem;
+    padding: 0.2rem;
+    display: block;
+}
+
+nav > ul > li:hover{
+    background-color: #dfdfe2;
+    color: #1b1b32;
+    cursor: pointer;
+}
+
+li > a{
+    color: inherit;
+    text-decoration: none;
 }
 
 h1, h2{
@@ -43,6 +90,8 @@ h1, h2{
 
 h2{
     border-bottom: 4px solid #dfdfe2;
+    margin-top: 0;
+    padding-top: 60px;
 }
 
 .sr-only{
@@ -57,7 +106,85 @@ h2{
     border: 0;
 }
 
+.info{
+    padding: 10px 0 0 5px;
+}
+
+.formrow{
+    margin-top: 30px;
+    padding: 0 15px;
+}
+
+input{
+    font-size: 16px;
+}
+
+.info input{
+    width: 50%;
+    text-align: left;
+}
+
+.info label{
+    width: 10%;
+    min-width: 55px;
+    text-align: right;
+}
+
+.info input, .info label{
+    display: inline-block;
+}
+
+.question-block{
+    text-align: left;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    padding-top: 5px;
+}
+
+p{
+    margin-top: 5px;
+    padding-left: 15px;
+    font-size: 20px;
+}
+
 p::before{
     content: "Question #";
 }
+
+.question{
+    border: none;
+    padding: 0px;
+}
+
+.answers-list{
+    list-style: none;
+    padding: 0px;
+}
+
+button{
+    display: block;
+    margin: 40px auto;
+    width: 40%;
+    padding: 15px;
+    font-size: 23px;
+    background: #d0d0d5;
+    border: 3px solid #3b3b4f;
+}
+
+footer{
+    background-color: #2a2a40;
+    display: flex;
+    justify-content: center;
+}
+
+footer, footer a{
+    color: #fff;
+}
+
+address{
+    text-align: center;
+    padding: 1px;
+}
+
 
