--- a/cursos/html_css/proyecto_02/styles.css
+++ b/cursos/html_css/proyecto_02/styles.css
@@ -20,15 +20,21 @@ p{
 }
 
 #img-div{
-    display: block;
-    align-content: center;
-    margin: 80px 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0 0 0;
 }
 
 #image{
     max-width: 100%;
-    height: auto;
-    align-content: center;
+}
+
+#img-caption{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0 0 30px 0;
 }
 
 section{
